# rust-htmx

./: Cargo.toml  README.md
src/: main.rs  renderer.rs  router.rs
templates/: index.hbs
views/: about.hbs  index.hbs
views/layouts/: default.hbs
views/partials/: nav.hbs
views/user/: list.hbs
