[package]
name = "rust-htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
axum-template = { version = "2.4.0", features = ["handlebars"] }
handlebars = "6.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
